--- a/codegen.yml
+++ b/codegen.yml
@@ -1,8 +1,8 @@
 overwrite: true
-schema: "http://localhost:8080/graphql"
+schema: "https://discuss-dev.us-west-2.aws.cloud.dgraph.io/graphql"
 documents: 
   - 'src/**/*.graphql'
-  - 'deploy/**/*.graphql'
+  - 'deploy/dev-setup**/*.graphql'
 generates:
   src/types/graphql.ts:
     plugins:
@@ -16,6 +16,7 @@ generates:
     plugins:
       - typescript-operations
       - typescript-react-apollo
+      - named-operations-object
     config:
       reactApolloVersion: 3
       withHOC: false
