--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss-import": "^12.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@types/luxon": "^1.24.1",
     "@types/node": "^12.0.0",
+    "@types/react-router-dom": "^5.1.6",
     "autoprefixer": "^9.8.6",
     "postcss-cli": "^7.1.2"
   }
