--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.2.9",
+    "@apollo/client": "^3.1.4",
+    "@auth0/auth0-react": "^1.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "graphql": "^15.4.0",
+    "add": "^2.0.6",
+    "graphql": "^15.1.0",
     "luxon": "^1.24.1",
     "postcss-import": "^12.0.1",
     "react": "^16.9.0",
@@ -29,7 +31,9 @@
     "build:css": "postcss src/styles/tailwind.css -o src/styles/main.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generate-types": "graphql-codegen --config codegen.yml"
+    "generate-types": "graphql-codegen --config codegen.yml",
+    "deploy-slash": "node deploy/SlashGraphQL/deploy.js",
+    "deploy-auth0": "node deploy/Auth0/deploy.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,17 +51,26 @@
     ]
   },
   "devDependencies": {
-    "@graphql-codegen/add": "^2.0.2",
-    "@graphql-codegen/cli": "^1.19.4",
-    "@graphql-codegen/named-operations-object": "^1.17.9",
-    "@graphql-codegen/near-operation-file-preset": "^1.17.13",
-    "@graphql-codegen/typescript": "^1.19.0",
-    "@graphql-codegen/typescript-operations": "^1.17.12",
-    "@graphql-codegen/typescript-react-apollo": "^2.2.1",
+    "@graphql-codegen/add": "^1.15.4",
+    "@graphql-codegen/cli": "^1.15.4",
+    "@graphql-codegen/named-operations-object": "^1.17.8",
+    "@graphql-codegen/near-operation-file-preset": "^1.15.4",
+    "@graphql-codegen/typescript": "^1.15.4",
+    "@graphql-codegen/typescript-operations": "^1.15.4",
+    "@graphql-codegen/typescript-react-apollo": "^1.15.4",
+    "@types/faker": "^4.1.12",
     "@types/luxon": "^1.24.1",
     "@types/node": "^12.0.0",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/react-router-dom": "^5.1.5",
+    "auth0": "^2.27.1",
     "autoprefixer": "^9.8.6",
-    "postcss-cli": "^7.1.2"
+    "cross-fetch": "^3.0.5",
+    "dotenv": "^8.2.0",
+    "faker": "^4.1.0",
+    "graphql-request": "^3.0.0",
+    "jwks-rsa": "^1.9.0",
+    "postcss-cli": "^7.1.2",
+    "readline-sync": "^1.4.10",
+    "ts-node": "^8.10.2"
   }
 }
