update statck and set new config

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-REACT_APP_SLASH_GRAPHQL_ENDPOINT=https://discuss-dev.us-west-2.aws.cloud.dgraph.io
-REACT_APP_SLASH_GRAPHQL_WS_ENDPOINT=wss://discuss-dev.us-west-2.aws.cloud.dgraph.io
-REACT_APP_AUTH0_DOMAIN="slash-discuss-dev.us.auth0.com"
-REACT_APP_AUTH0_CLIENT_ID="T14LbWbDLrwetYY8zk5HRJHBfZ35SWkZ"
+REACT_APP_SLASH_GRAPHQL_ENDPOINT=https://blue-surf-820037.us-east-1.aws.cloud.dgraph.io
+REACT_APP_SLASH_GRAPHQL_WS_ENDPOINT=wss://blue-surf-820037.us-east-1.aws.cloud.dgraph.io
+REACT_APP_AUTH0_DOMAIN="dev-5q3n8cc7nckhu5w8.us.auth0.com"
+REACT_APP_AUTH0_CLIENT_ID="aqk1CSVtliyoXUfLaaLKSKUtkaIel6Vd"
