--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.1.4",
+    "@apollo/client": "^3.7.9",
     "@auth0/auth0-react": "^1.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
     "add": "^2.0.6",
-    "graphql": "^15.1.0",
+    "graphql": "^16.6.0",
     "luxon": "^1.24.1",
     "postcss-import": "^12.0.1",
     "react": "^16.9.0",
@@ -20,9 +17,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2",
+    "semantic-ui-react": "^2.1.4",
+    "subscriptions-transport-ws": "^0.11.0",
     "tailwindcss": "^1.8.5",
-    "typescript": "~3.7.2",
     "yarn": "^1.22.5"
   },
   "scripts": {
@@ -52,26 +49,29 @@
     ]
   },
   "devDependencies": {
-    "@graphql-codegen/add": "^1.15.4",
-    "@graphql-codegen/cli": "^1.15.4",
-    "@graphql-codegen/named-operations-object": "^1.17.8",
-    "@graphql-codegen/near-operation-file-preset": "^1.15.4",
-    "@graphql-codegen/typescript": "^1.15.4",
-    "@graphql-codegen/typescript-operations": "^1.15.4",
-    "@graphql-codegen/typescript-react-apollo": "^1.15.4",
+    "@graphql-codegen/add": "^4.0.1",
+    "@graphql-codegen/cli": "^3.2.1",
+    "@graphql-codegen/named-operations-object": "^2.3.1",
+    "@graphql-codegen/near-operation-file-preset": "^2.5.0",
+    "@graphql-codegen/typescript": "^3.0.1",
+    "@graphql-codegen/typescript-operations": "^3.0.1",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/faker": "^4.1.12",
     "@types/luxon": "^1.24.1",
-    "@types/node": "^12.0.0",
+    "@types/node": "^18.14.2",
+    "@types/react": "^18.0.28",
     "@types/react-router-dom": "^5.1.5",
+    "@types/semantic-ui": "^2.2.7",
     "auth0": "^2.27.1",
     "autoprefixer": "^9.8.6",
     "cross-fetch": "^3.0.5",
     "dotenv": "^8.2.0",
     "faker": "^4.1.0",
-    "graphql-request": "^3.0.0",
+    "graphql-request": "^5.1.0",
     "jwks-rsa": "^1.9.0",
     "postcss-cli": "^7.1.2",
     "readline-sync": "^1.4.10",
-    "ts-node": "^8.10.2"
+    "ts-node": "^8.10.2",
+    "typescript": "^4.9.5"
   }
 }
