--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: "https://discuss-dev.us-west-2.aws.cloud.dgraph.io/graphql"
+schema: "https://blue-surf-820037.us-east-1.aws.cloud.dgraph.io/graphql"
 documents: 
   - 'src/**/*.graphql'
   - 'deploy/dev-setup**/*.graphql'
